@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    #584, add Semigroup/Monoid instances for Action
     Add produces to declare which untracked files a rule produces
     Add untrackedDependencies to note which rules cannot be cached
     #583, add replaceDirectory1
